--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
     <div class="section padding-top-bottom over-hide background-dark z-bigger-2 text-center">
         <h2 class="social-title">Sosial Media Saya</h2>
         <div class="social-links">
-            <a href="https://github.com/AlfaHachiman"><img src="githubni.png" alt="GitHub"></a>
+            <a href="https://github.com/anisaputriii11"><img src="githubni.png" alt="GitHub"></a>
             <a href="https://www.instagram.com/sa.nisakk?utm_source=ig_web_button_share_sheet&igsh=ZDNlZDc0MzIxNw=="><img src="instagramlogo.png" alt="Instagram"></a>
         </div>
     </div>
